--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/src/components/icons/logo_escuro.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Comics</title>
+    <title>Invencible Comics</title>
     <script src="https://kit.fontawesome.com/102d9d1cd0.js" crossorigin="anonymous"></script>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+   
   </head>
   <body>
     <div id="app"></div>
